# vault

./: .gitmodules  CMakeLists.txt  README.md
src/: facenet.py  speech_feature.py
src/encode/: embedding_vector_1.txt  embedding_vector_2.txt  embedding_vector_client.txt  encode.cc  encode.h  lsh.cc  lsh.h  super_bit.cc  super_bit.h  super_bit_lsh.cc  super_bit_lsh.h
src/key_binding_and_retrieval/: cs_functions.h  point_conversion.cc  point_conversion.h  polynomials.cc  polynomials.h
src/test/: coeff_V.txt  test_client.cc  test_server.cc
